blocks/events/events.css
/* ... */
  
  .filter-category-item:last-child {
    margin: 0 0 18px;
  }
  
  .filter-category:last-child,
  .filter-category:last-child .filter-category-content .filter-category-item:last-child {
    margin: 0;
  }
  
  .filter-category-toggle {
    background: transparent;
    border: none;
    color: var(--c-copy);
    cursor: pointer;
    display: flex;
    font-family: var(--ff-primary);
    font-size: var(--base-font-size);
    font-weight: var(--fw-med);
    justify-content: space-between;
    line-height: calc((16 / 16) * 1rem);
    margin: 12px 0 var(--spacing-micro);
    min-height: 31px;
    padding: var(--spacing-micro) 0;
    text-align: left;
    width: 100%;
  }
  
  .filter-category-toggle .accordion-icon {
    position: relative;
  }
  
  .filter-category-toggle .accordion-icon::after {
    font-family: var(--ff-pricefx-icons);
    font-size: 24px;
    font-weight: var(--fw-regular);
    height: 24px;
    position: absolute;
    right: 10px;
    top: 0;
  }
  
  .filter-category-toggle[aria-expanded = 'false'] .accordion-icon::after {
    content: var(--icon-plus);
  }
  
  .filter-category-toggle[aria-expanded = 'true'] .accordion-icon::after {
    content: var(--icon-minus);
  }
  
  .filter-category-content {
    list-style-type: none;
    max-height: max-content;
    transition: max-height 0.15s ease;
  }
  
  .filter-category-item label {
    color: var(--c-copy);
    font-family: var(--ff-secondary);
    font-size: var(--body-font-size-l);
    line-height: calc((24 / 16) * 1rem);
    text-transform: capitalize;
  }
  
  /* event STYLES */
  .events-content {
    display: block;
    transition: var(--base-transition-2);
    transition-delay: 0.15s;
    width: 80%;
  }
  
  .events-content--full-width {
    transition: var(--base-transition-2);
    transition-delay: 0.15s;
    width: 100%;
  }
  
  .featured-event {
    background: var(--c-white);
    border-radius: 16px;
    box-shadow: 0 4px 16px 0 rgba(0 0 0 / 25%);
    display: flex;
    overflow: hidden;
    margin-bottom: var(--spacing-medium);
    width: 100%;
  }
  
  .featured-event .event-image {
    border-radius: 0 16px 16px 0;
    overflow: hidden;
    width: 50%;
  }
  
  .featured-event .event-image img {
    aspect-ratio: auto 16 / 9;
    display: block;
    height: 100%;
    object-fit: cover;
    width: 100%;
  }
  
  .featured-event .event-content {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: var(--spacing-small) 19px 20px var(--spacing-small);
    width: 50%;
  }
  
  .event-subtitle {
    color: var(--c-card-subtitle);
    font-family: var(--ff-secondary);
    font-size: var(--body-font-size-s);
    font-weight: var(--fw-lt-bold);
    line-height: calc((28 / 16) * 1rem);
    margin: 0 0 var(--spacing-micro);
    margin-bottom: 0 !important;
    text-transform: capitalize;
  }
  
  h2.event-title,
  .no-events {
    -webkit-text-fill-color: var(--c-extra-dark);
    background: transparent;
    color: var(--c-extra-dark);
    font-size: var(--heading-font-size-l);
    font-weight: var(--fw-med);
    margin: 0 0 5px;
  }
  
  .event-info {
    color: var(--c-extra-dark);
    font-size: calc((13 / 16) * 1rem);
    line-height: calc((21 / 16) * 1rem);
  }
  
  .event-author-link {
    text-transform: capitalize;
  }
  
  .event-cta-container {
    border-top: 1px solid var(--c-gray-border);
    display: flex;
    justify-content: space-between;
    padding-top: 15px;
  }
  
  a.event-link {
    color: var(--c-extra-dark);
    font-family: var(--ff-primary);
    font-size: var(--body-font-size-xs);
    font-weight: var(--fw-med);
    letter-spacing: 0.01px;
    line-height: calc((14 / 16) * 1rem);
    position: relative;
    text-transform: uppercase;
  }
  
  a.event-link::after {
    content: var(--icon-triangle-right);
    font-family: var(--ff-pricefx-icons);
    font-size: calc((8 / 16) * 1rem);
    height: 5.18px;
    margin-left: 10px;
    position: absolute;
    width: 9px;
  }
  
  .event-readtime {
    color: var(--c-gray-med-2);
    font-family: var(--ff-primary);
    font-size: var(--body-font-size-xs);
    font-weight: var(--fw-med);
    height: 20px;
    line-height: 1;
  }
  
  .event-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: var(--spacing-small);
    list-style: none;
  }
  
  .event-card {
    border-radius: 16px;
    background: var(--c-white);
    box-shadow: 0 4px 16px 0 rgba(0 0 0 / 25%);
    display: flex;
    flex-direction: column;
    margin: 0;
  }
  
  .event-card .event-image {
    max-height: 150px;
    min-height: 150px;
  }
  
  .event-card .event-image img {
    border-radius: 16px;
    display: block;
    height: 100%;
    object-fit: cover;
    width: 100%;
  }
  
  .event-card .event-content {
    display: flex;
    flex-direction: column;
    height: 40%;
    justify-content: space-between;
  }
  
  .event-card .event-details {
    min-height: 115px;
    padding: var(--spacing-xsmall) var(--spacing-xsmall) 0;
  }
  
  .event-card .event-title {
    font-family: var(--ff-secondary);
    font-size: calc((20 / 16) * 1rem);
    font-weight: var(--fw-lt-bold);
    line-height: calc((26 / 16) * 1rem);
  }
  
  .event-card .event-cta-container {
    margin: 0 var(--spacing-xsmall);
    padding-bottom: var(--spacing-xsmall);
  }
  
  .event-card .event-cta-container a,
  .event-card .event-cta-container p {
    height: 20px;
  }
  
  .no-events {
    font-size: var(--heading-font-size-m);
    font-weight: var(--fw-regular);
    grid-column: span 3;
    margin: var(--spacing-jumbo) auto 0;
    max-width: 750px;
    padding: var(--spacing-small);
    text-align: center;
    width: 100%;
  }
  
  /* PAGINATION STYLES */
  .pagination-wrapper {
    align-items: center;
    display: flex;
    justify-content: center;
    margin: var(--spacing-medium) auto 0;
    text-align: center;
    width: 100%;
  }
/* ... */

